# ChangeLog for games-action/descent3
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/descent3/ChangeLog,v 1.4 2004/03/19 21:16:58 wolf31o2 Exp $

  19 Mar 2004; Chris Gianelloni <wolf31o2@gentoo.org> descent3-1.4.0b.ebuild:
  Added -p to mkdir.  Closing bug #43427.

  15 Feb 2004; Chris Gianelloni <wolf31o2@gentoo.org> descent3-1.4.0b.ebuild:
  Updated to use new cdrom_get_cds routine in eutils.eclass.

*descent3-1.4.0b (28 Jul 2003)

  28 Jul 2003; Chris Gianelloni <wolf31o2@gentoo.org> descent3-1.4.0b.ebuild,
  files/descent3:
  Initial import.  Ebuild by me.
