@@ -1,5 +1,5 @@
-MD5 ba955261c1f216618ce0f429f8fab975 ChangeLog 649
+MD5 08934941d01cc8fb2d0819a687abefc9 ChangeLog 775
 MD5 e43b9b7575f9c659feedda43ab915f01 metadata.xml 630
-MD5 bca97ed31cb84893959a0728da1821f5 descent3-1.4.0b.ebuild 2698
+MD5 5b3afed89e6e7ba8fe27d806b58caec9 descent3-1.4.0b.ebuild 2744
 MD5 d2af265a871305bb7fa493725388a58d files/digest-descent3-1.4.0b 138
 MD5 5fa77308aec1bb4ed9a32b2ed363148e files/descent3 43
