@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/descent3/Attic/descent3-1.4.0b.ebuild,v 1.3 2004/03/19 21:16:58 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/descent3/Attic/descent3-1.4.0b.ebuild,v 1.4 2004/04/04 07:10:06 wolf31o2 Exp $
 
 inherit games
 
@@ -79,11 +79,14 @@ src_install() {
 	# we run touch on ${D} so as to make sure portage doesnt do any such thing
 	find ${Ddir} -exec touch '{}' \;
 
-	dodir ${GAMES_BINDIR}
 	dogamesbin ${FILESDIR}/descent3
 	dosed "s:GENTOO_DIR:${dir}:" ${GAMES_BINDIR}/descent3
 	insinto /usr/share/pixmaps
 	newins ${CDROM_ROOT}/icon.xpm descent3.xpm
+
+	# Fix for 2.6 kernel crash
+	cd ${Ddir}
+	ln -sf ppics.hog PPics.Hog
 
 	prepgamesdirs
 	make_desktop_entry descent3 "Descent 3" "descent3.xpm"
