@@ -1,6 +1,9 @@
 # ChangeLog for games-action/descent3
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/descent3/ChangeLog,v 1.4 2004/03/19 21:16:58 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/descent3/ChangeLog,v 1.5 2004/04/04 07:10:06 wolf31o2 Exp $
+
+  04 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org> descent3-1.4.0b.ebuild:
+  Fixed crash with 2.6 and closing bug #38862.
 
   19 Mar 2004; Chris Gianelloni <wolf31o2@gentoo.org> descent3-1.4.0b.ebuild:
   Added -p to mkdir.  Closing bug #43427.
